# byte-set-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: Cargo.toml  main.rs  rand.rs  util.rs
benches/benchmarks/: clear.rs  contains_cached.rs  contains_random.rs  drop.rs  extend_slice.rs  insert.rs  iter.rs  len.rs  max.rs  min.rs  mod.rs  remove_single.rs
benches/util/: bool256.rs  hash.rs  mod.rs  rand.rs
src/: chunk.rs  iter.rs  lib.rs  macros.rs  slot.rs  tests.rs  tests_macros.rs
src/byte_set/: ascii.rs  main_impl.rs  mod.rs  raw.rs  traits.rs
src/iter/: mod.rs  tests.rs
src/tests/: byte_set.rs  iter.rs  mod.rs
