[package]
name = "byte_set"
version = "0.1.0"
edition = "2018"
authors = ["Nikolai Vazquez"]
description = "Efficient sets of bytes."
keywords = ["byte", "set", "search", "string"]
categories = ["no-std", "data-structures", "rust-patterns", "embedded"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
rand = { version = "0.7", default-features = false, optional = true }
rand_core = { version = "0.5", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7"

[[bench]]
name = "benches"
path = "benches/main.rs"
harness = false
