[package]
name = "byte_set"
version = "0.1.2"
edition = "2018"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Efficient sets of bytes."
repository = "https://github.com/nvzqz/byte-set-rs"
homepage = "https://github.com/nvzqz/byte-set-rs"
documentation = "https://docs.rs/byte_set"
keywords = ["byte", "set", "search", "string", "fast"]
categories = ["no-std", "data-structures", "rust-patterns", "embedded"]
include = ["Cargo.toml", "src", "benches", "README*", "CHANGELOG*", "LICENSE*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand = { version = "0.7", default-features = false, optional = true }
rand_core = { version = "0.5", default-features = false, optional = true }
serde = { version = "1.0", default-features = false , optional = true }

[dev-dependencies]
criterion = "0.3.2"
hashbrown = "0.7.2"
rand = "0.7"

[[bench]]
name = "benches"
path = "benches/main.rs"
harness = false
